@@ -233,7 +233,7 @@
       		<artifactId>gson</artifactId>
       		<version>1.7.1</version>
       		<scope>compile</scope>
-    	</dependency>        
+    	</dependency>
         <dependency>
             <groupId>org.kuali.rice</groupId>
             <artifactId>rice-api</artifactId>
@@ -403,6 +403,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.plugin.version}</version>
                 <configuration>
+                    <argLine>-Xms1024m -Xmx2048m -XX:PermSize=128m -XX:MaxPermSize=256m</argLine>
                     <!--
                          <excludes>
                              <exclude>**/*</exclude>
